# Learning_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
builds/tests/: index.html
builds/tests/10/: index.html
builds/tests/10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/10/export/: influxDbData.txt  prometheusData.txt
builds/tests/10/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
builds/tests/10/widgets/: categories-trend.json  executors.json  severity.json  summary.json
builds/tests/11/: index.html
builds/tests/11/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/11/export/: influxDbData.txt  prometheusData.txt
builds/tests/11/history/: duration-trend.json  (+3 more)
builds/tests/12/: index.html
builds/tests/13/: index.html
builds/tests/14/: index.html
builds/tests/15/: index.html
builds/tests/16/: index.html
builds/tests/17/: index.html
builds/tests/18/: index.html
builds/tests/19/: index.html
builds/tests/20/: index.html
builds/tests/21/: index.html
builds/tests/22/: index.html
builds/tests/3/: index.html
builds/tests/4/: index.html
builds/tests/5/: index.html
builds/tests/6/: index.html
builds/tests/7/: index.html
builds/tests/8/: index.html
builds/tests/9/: index.html
builds/tests/last-history/: history-trend.json  history.json
features/: orange_login.feature  web_search.feature
steps/: test_search_steps.py
(+295 files in other folders)
