[tool.poetry]
name = "learning_project"
version = "0.1.0"
description = "Playwright + pytest BDD tests for learning project"
authors = ["Shubham <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
playwright = "^1.36.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-bdd = "^8.1"
pytest-playwright = "^0.7"
allure-pytest = "^2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
